<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hectorvera.layoutetc.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="3">
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:onClick="onLaunch2"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/eight"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/nine"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="2">
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/four"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/five"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/six"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="1">
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/one"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/two"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/three"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight=".5">
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/zero"/>
        <Button
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dot"/>
    </LinearLayout>

</LinearLayout>
